Add CFA-native precision compiler
Compile taken scalar guards from authoritative ARG paths into deterministic location-specific PRECISION_ONLY predicates, with fail-closed transport certificates and typed rejections. Preserve stock precision during injection and support compiler-only runs without an LLM client.